--- a/.github/workflows/plansys2_bt_example.yaml
+++ b/.github/workflows/plansys2_bt_example.yaml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - name: Install popf deps
         run: sudo apt-get install libfl-dev
+      - uses: actions/checkout@v2
       - name: Setup ROS 2
         uses: ros-tooling/setup-ros@0.7.1
         with:
