--- a/.github/workflows/plansys2_bt_example.yaml
+++ b/.github/workflows/plansys2_bt_example.yaml
@@ -22,15 +22,15 @@ jobs:
         run: sudo apt-get install libfl-dev
       - uses: actions/checkout@v2
       - name: Setup ROS 2
-        uses: ros-tooling/setup-ros@0.7.1
+        uses: ros-tooling/setup-ros@0.7.3
         with:
           required-ros-distributions: rolling
       - name: Install BT.CPP v4 and test_msgs (provisional Fix)
         run: sudo apt-get install ros-rolling-behaviortree-cpp ros-rolling-test-msgs
       - name: Rosdep update
-        run: sudo rosdep update
+        run: rosdep update
       - name: build and test
-        uses: ros-tooling/action-ros-ci@0.3.6
+        uses: ros-tooling/action-ros-ci@0.3.7
         with:
           package-name: plansys2_bt_example
           target-ros2-distro: rolling
